--- a/src/AI_Screencap/packages.config
+++ b/src/AI_Screencap/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IllusionLibs.AIGirl.Assembly-CSharp" version="2019.12.20" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.Assembly-CSharp-firstpass" version="2019.11.8" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.Sirenix.Serialization" version="2019.12.20" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.Unity.Postprocessing.Runtime" version="2018.2.21" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.AssetBundleModule" version="2018.2.21" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.ScreenCaptureModule" version="2018.2.21" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta2" targetFramework="net46" developmentDependency="true" />
 </packages>
