--- a/src/AI_Sideloader/packages.config
+++ b/src/AI_Sideloader/packages.config
@@ -9,6 +9,7 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.UnityWebRequestWWWModule" version="2018.2.21" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta" targetFramework="net46" developmentDependency="true" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net46" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
 </packages>
