--- a/src/EC_Sideloader/packages.config
+++ b/src/EC_Sideloader/packages.config
@@ -11,6 +11,7 @@
   <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.TextRenderingModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net46" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
 </packages>
