--- a/src/EC_BGMLoader/packages.config
+++ b/src/EC_BGMLoader/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IllusionLibs.BepInEx" version="5.0.0" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.0.1.1" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta2" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.Assembly-CSharp" version="2019.6.6" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.UnityEngine.AudioModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.AudioModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
 </packages>
